# SimBattle

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  pch.cpp  pch.h  unit.cpp  unit.h  utility.cpp  utility.h
data/: units.json
localisation/: SimBattle_zh_CN.ts
